--- a/motif_database_comparison/envs/gimme.yaml
+++ b/motif_database_comparison/envs/gimme.yaml
@@ -1,42 +1,196 @@
 channels:
-  - r
-  - defaults
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
-  - python=3
-  - scipy >=0.9.0
-  - numpy 
-  - matplotlib >=2.0
-  - jinja2
-  - pyyaml >=3.10
-  - pybedtools
-  - statsmodels
-  - scikit-learn >=0.18
-  - sklearn-contrib-lightning
-  - seaborn
-  - pysam
-  - xgboost >=0.71
-  - xdg
-  - diskcache
-  - python-xxhash
-  - six
-  - future
-  - pillow
-  - bedtools
-  - ucsc-genepredtobed
-  - ucsc-bigbedtobed
-  - homer
-  - gadem
-  - trawler
-  - weeder
-  - xxmotif
-  - meme 
-  - ghostscript
-  - tqdm
-  - genomepy
-  - ncurses
-  - feather-format
-  - pyarrow >=0.13.0
-  - pip:
+  - _py-xgboost-mutex=2.0=cpu_0
+  - appdirs=1.4.3=py_1
+  - arrow-cpp=0.13.0=py36h620436b_3
+  - asn1crypto=0.24.0=py36_1003
+  - atomicwrites=1.3.0=py_0
+  - attrs=19.1.0=py_0
+  - bcftools=1.9=ha228f0b_4
+  - bedtools=2.28.0=hdf88d34_0
+  - boltons=19.1.0=py_0
+  - boost-cpp=1.68.0=h11c811c_1000
+  - brotli=1.0.7=hf484d3e_1000
+  - bucketcache=0.12.1=py36_1
+  - bzip2=1.0.6=h14c3975_1002
+  - ca-certificates=2019.3.9=hecc5488_0
+  - certifi=2019.3.9=py36_0
+  - cffi=1.12.3=py36h8022711_0
+  - chardet=3.0.4=py36_1003
+  - click=7.0=py_0
+  - cryptography=2.6.1=py36h72c5cf5_0
+  - curl=7.64.1=hf8cf82a_0
+  - cycler=0.10.0=py_1
+  - dbus=1.13.6=he372182_0
+  - decorator=4.4.0=py_0
+  - diskcache=3.1.1=py_0
+  - expat=2.2.5=hf484d3e_1002
+  - feather-format=0.3.1=py36_1
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.10.0=he983fc9_0
+  - future=0.17.1=py36_1000
+  - gadem=1.3.1=h470a237_1
+  - genomepy=0.5.5=py36_0
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - gflags=2.2.2=hf484d3e_1001
+  - ghostscript=9.22=hf484d3e_1001
+  - gimmemotifs=0.13.1=py36hdd2ebf5_1
+  - glib=2.58.3=hf63aee3_1001
+  - glog=0.4.0=he1b5a44_1
+  - gst-plugins-base=1.14.4=hdf3bae2_1001
+  - gstreamer=1.14.4=h66beb1c_1001
+  - homer=4.9.1=pl526h2d50403_6
+  - htslib=1.9=ha228f0b_7
+  - icu=58.2=hf484d3e_1000
+  - idna=2.8=py36_1000
+  - importlib_metadata=0.15=py36_0
+  - jinja2=2.10.1=py_0
+  - joblib=0.13.2=py_0
+  - jpeg=9c=h14c3975_1001
+  - kiwisolver=1.1.0=py36hc9558a2_0
+  - krb5=1.16.3=h05b26f9_1001
+  - libblas=3.8.0=10_openblas
+  - libcblas=3.8.0=10_openblas
+  - libcurl=7.64.1=hda55be3_0
+  - libdeflate=1.0=h14c3975_1
+  - libedit=3.1.20170329=hf8c457e_1001
+  - libffi=3.2.1=he1b5a44_1006
+  - libgcc=7.2.0=h69d50b8_2
+  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libiconv=1.15=h516909a_1005
+  - liblapack=3.8.0=10_openblas
+  - libpng=1.6.37=hed695b0_0
+  - libprotobuf=3.7.1=h8b12597_0
+  - libssh2=1.8.2=h22169c7_2
+  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libtiff=4.0.10=h648cc4a_1001
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxgboost=0.82=he1b5a44_0
+  - libxml2=2.9.9=h13577e0_0
+  - libxslt=1.1.32=h4785a14_1002
+  - logbook=1.4.3=py36h516909a_0
+  - lz4-c=1.8.3=he1b5a44_1001
+  - markupsafe=1.1.1=py36h14c3975_0
+  - matplotlib=3.1.0=py36_1
+  - matplotlib-base=3.1.0=py36hfd891ef_1
+  - meme=5.0.2=py36pl526h96dd833_5
+  - more-itertools=4.3.0=py36_1000
+  - mpi=1.0=openmpi
+  - mysql-connector-c=6.1.11=hd2bbab6_1003
+  - ncurses=6.1=hf484d3e_1002
+  - norns=0.1.4=py_0
+  - nose=1.3.7=py36_1002
+  - numpy=1.16.4=py36h95a1406_0
+  - olefile=0.46=py_0
+  - openblas=0.3.6=h6e990d7_2
+  - openjdk=11.0.1=h516909a_1016
+  - openmpi=3.1.4=hc99cbb1_0
+  - openssl=1.1.1b=h14c3975_1
+  - pandas=0.24.2=py36hb3f55d8_0
+  - parquet-cpp=1.5.1=2
+  - pathlib=1.0.1=py_1
+  - patsy=0.5.1=py_0
+  - pcre=8.41=hf484d3e_1003
+  - perl=5.26.2=h516909a_1006
+  - perl-algorithm-cluster=1.58=pl526h14c3975_0
+  - perl-app-cpanminus=1.7044=pl526_1
+  - perl-base=2.23=pl526_1
+  - perl-carp=1.38=pl526_3
+  - perl-cgi=4.43=pl526h14c3975_0
+  - perl-common-sense=3.74=pl526_2
+  - perl-constant=1.33=pl526_1
+  - perl-dbi=1.642=pl526_0
+  - perl-encode=2.88=pl526_1
+  - perl-exporter=5.72=pl526_1
+  - perl-extutils-makemaker=7.36=pl526_1
+  - perl-file-path=2.16=pl526_0
+  - perl-file-temp=0.2304=pl526_2
+  - perl-file-which=1.23=pl526_0
+  - perl-html-parser=3.72=pl526h6bb024c_5
+  - perl-html-tagset=3.20=pl526_3
+  - perl-html-template=2.97=pl526_1
+  - perl-html-tree=5.07=pl526_1
+  - perl-json=4.02=pl526_0
+  - perl-json-xs=2.34=pl526h6bb024c_3
+  - perl-log-log4perl=1.49=pl526_0
+  - perl-math-cdf=0.1=pl526h14c3975_5
+  - perl-parent=0.236=pl526_1
+  - perl-scalar-list-utils=1.50=pl526h14c3975_0
+  - perl-types-serialiser=1.0=pl526_2
+  - perl-xml-namespacesupport=1.12=pl526_0
+  - perl-xml-parser=2.44_01=pl526h3a4f0e9_1
+  - perl-xml-sax=1.00=pl526_0
+  - perl-xml-sax-base=1.09=pl526_0
+  - perl-xml-sax-expat=0.51=pl526_3
+  - perl-xml-simple=2.25=pl526_1
+  - perl-xsloader=0.24=pl526_0
+  - perl-yaml=1.29=pl526_0
+  - pillow=6.0.0=py36he7afcd5_0
+  - pip=19.1=py36_0
+  - pluggy=0.12.0=py_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - py=1.8.0=py_0
+  - py-xgboost=0.82=py36he1b5a44_0
+  - pyarrow=0.13.0=py36h0978efd_0
+  - pybedtools=0.8.0=py36he860b03_1
+  - pycparser=2.19=py36_1
+  - pyfaidx=0.5.5.2=py_1
+  - pyopenssl=19.0.0=py36_0
+  - pyparsing=2.4.0=py_0
+  - pyqt=5.9.2=py36hcca6a23_0
+  - pysam=0.15.2=py36h4b7d16d_3
+  - pysocks=1.7.0=py36_0
+  - pytest=4.5.0=py36_0
+  - python=3.6.7=h381d211_1004
+  - python-dateutil=2.8.0=py_0
+  - python-xxhash=1.3.0=py36h14c3975_0
+  - pytz=2019.1=py_0
+  - pyyaml=5.1=py36h14c3975_0
+  - qt=5.9.7=h52cfd70_2
+  - re2=2019.04.01=he1b5a44_0
+  - readline=7.0=hf8c457e_1001
+  - represent=1.6.0=py36h516909a_0
+  - requests=2.22.0=py36_0
+  - samtools=1.9=h8571acd_11
+  - scikit-learn=0.21.2=py36h627018c_0
+  - scipy=1.2.1=py36h09a28d5_1
+  - seaborn=0.9.0=py_1
+  - setuptools=41.0.1=py36_0
+  - sip=4.19.8=py36hf484d3e_1000
+  - six=1.12.0=py36_1000
+  - sklearn-contrib-lightning=0.5.0=py36_0
+  - snappy=1.1.7=hf484d3e_1002
+  - sqlite=3.28.0=h8b20d00_0
+  - statsmodels=0.9.0=py36h3010b51_1000
+  - thrift-cpp=0.12.0=h0a07b25_1002
+  - tk=8.6.9=h84994c4_1001
+  - tornado=6.0.2=py36h516909a_0
+  - tqdm=4.32.1=py_0
+  - trawler=2.0=pl526_2
+  - ucsc-bedtogenepred=377=h35c10e6_0
+  - ucsc-bigbedtobed=357=1
+  - ucsc-genepredtobed=377=h35c10e6_2
+  - ucsc-genepredtogtf=377=h35c10e6_2
+  - ucsc-gtftogenepred=377=h35c10e6_2
+  - urllib3=1.24.3=py36_0
+  - wcwidth=0.1.7=py_1
+  - weeder=2.0=h6bb024c_3
+  - wheel=0.33.4=py36_0
+  - xdg=3.0.2=0
+  - xgboost=0.82=py36he1b5a44_0
+  - xmltodict=0.12.0=py_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xxmotif=1.6=h2d50403_2
+  - xz=5.2.4=h14c3975_1001
+  - yaml=0.1.7=h14c3975_1001
+  - zipp=0.5.0=py_0
+  - zlib=1.2.11=h14c3975_1004
+  - zstd=1.3.3=1
+  - pip: 
     - git+https://github.com/vanheeringen-lab/gimmemotifs.git@b3c3e7e
