--- a/motif_database_comparison/envs/gimme.yaml
+++ b/motif_database_comparison/envs/gimme.yaml
@@ -28,7 +28,7 @@ dependencies:
   - decorator=4.4.0=py_0
   - diskcache=3.1.1=py_0
   - expat=2.2.5=hf484d3e_1002
-  - feather-format=0.3.1=py36_1
+  - feather-format=0.4.0=py_1003
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
   - future=0.17.1=py36_1000
@@ -37,7 +37,6 @@ dependencies:
   - gettext=0.19.8.1=hc5be6a0_1002
   - gflags=2.2.2=hf484d3e_1001
   - ghostscript=9.22=hf484d3e_1001
-  - gimmemotifs=0.13.1=py36hdd2ebf5_1
   - glib=2.58.3=hf63aee3_1001
   - glog=0.4.0=he1b5a44_1
   - gst-plugins-base=1.14.4=hdf3bae2_1001
@@ -46,14 +45,14 @@ dependencies:
   - htslib=1.9=ha228f0b_7
   - icu=58.2=hf484d3e_1000
   - idna=2.8=py36_1000
-  - importlib_metadata=0.15=py36_0
+  - importlib_metadata=0.17=py36_1
   - jinja2=2.10.1=py_0
   - joblib=0.13.2=py_0
   - jpeg=9c=h14c3975_1001
   - kiwisolver=1.1.0=py36hc9558a2_0
   - krb5=1.16.3=h05b26f9_1001
-  - libblas=3.8.0=10_openblas
-  - libcblas=3.8.0=10_openblas
+  - libblas=3.8.0=7_openblas
+  - libcblas=3.8.0=7_openblas
   - libcurl=7.64.1=hda55be3_0
   - libdeflate=1.0=h14c3975_1
   - libedit=3.1.20170329=hf8c457e_1001
@@ -62,12 +61,12 @@ dependencies:
   - libgcc-ng=8.2.0=hdf63c60_1
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=10_openblas
+  - liblapack=3.8.0=7_openblas
   - libpng=1.6.37=hed695b0_0
   - libprotobuf=3.7.1=h8b12597_0
   - libssh2=1.8.2=h22169c7_2
   - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.10=h648cc4a_1001
+  - libtiff=4.0.10=h9022e91_1002
   - libuuid=2.32.1=h14c3975_1000
   - libxcb=1.13=h14c3975_1002
   - libxgboost=0.82=he1b5a44_0
@@ -87,10 +86,11 @@ dependencies:
   - nose=1.3.7=py36_1002
   - numpy=1.16.4=py36h95a1406_0
   - olefile=0.46=py_0
-  - openblas=0.3.6=h6e990d7_2
+  - openblas=0.3.5=h9ac9557_1001
   - openjdk=11.0.1=h516909a_1016
   - openmpi=3.1.4=hc99cbb1_0
   - openssl=1.1.1b=h14c3975_1
+  - packaging=19.0=py_0
   - pandas=0.24.2=py36hb3f55d8_0
   - parquet-cpp=1.5.1=2
   - pathlib=1.0.1=py_1
@@ -145,14 +145,14 @@ dependencies:
   - pyqt=5.9.2=py36hcca6a23_0
   - pysam=0.15.2=py36h4b7d16d_3
   - pysocks=1.7.0=py36_0
-  - pytest=4.5.0=py36_0
+  - pytest=4.6.1=py36_0
   - python=3.6.7=h381d211_1004
   - python-dateutil=2.8.0=py_0
   - python-xxhash=1.3.0=py36h14c3975_0
   - pytz=2019.1=py_0
   - pyyaml=5.1=py36h14c3975_0
   - qt=5.9.7=h52cfd70_2
-  - re2=2019.04.01=he1b5a44_0
+  - re2=2019.06.01=he1b5a44_0
   - readline=7.0=hf8c457e_1001
   - represent=1.6.0=py36h516909a_0
   - requests=2.22.0=py36_0
@@ -189,7 +189,7 @@ dependencies:
   - xxmotif=1.6=h2d50403_2
   - xz=5.2.4=h14c3975_1001
   - yaml=0.1.7=h14c3975_1001
-  - zipp=0.5.0=py_0
+  - zipp=0.5.1=py_0
   - zlib=1.2.11=h14c3975_1004
   - zstd=1.3.3=1
   - pip: 
